# kostka

./: .gitignore  Cargo.toml  GT_DIM_ALGORITHM.md  GT_POLYTOPE_REFERENCE.md  LICENSE  README.md  bench_lr.py  compute_all_ehrhart.py  hstar_table.md
documents/: bench_lrcalc.sh  bibliography.bib  ehrhart-reciprocity.tex  gt_polymake.pl  stembridge-hstar.tex  zig-zag-poset.tex
src/: ehrhart.rs  gt_dim.rs  kostka_dp.rs  lib.rs  lr.rs  main.rs  partition.rs  populate.rs  syt.rs  table.rs
