[package]
name = "kostka"
version = "0.1.0"
edition = "2021"
description = "Kostka coefficients, Ehrhart polynomials of Gelfand-Tsetlin polytopes, and h*-vectors"
license = "MIT"

[[bin]]
name = "kostka"
path = "src/main.rs"

[dependencies]
rayon       = "=1.10.0"
num         = "0.4"
num-bigint  = "0.4"
num-rational= "0.4"
num-traits  = "0.2"
clap        = { version = "4", features = ["derive"] }
hashbrown   = "0.15"
