[package]
name = "kostka"
version = "0.1.0"
edition = "2021"
description = "Kostka coefficients, Ehrhart polynomials of Gelfand-Tsetlin polytopes, and h*-vectors"
license = "MIT"

[lib]
name = "kostka"
path = "src/lib.rs"

[[bin]]
name = "kostka"
path = "src/main.rs"

[dependencies]
rayon       = "=1.10.0"
num         = "0.4"
num-bigint  = "0.4"
num-rational= "0.4"
num-traits  = "0.2"
clap        = { version = "4", features = ["derive", "env"] }
hashbrown   = "0.15"
flate2       = { version = "1", features = ["rust_backend"] }
serde_json   = "1"
dotenv = "0.15.0"
mysql = { version = "27.0.0", default-features = false, features = ["default-rust"] }
